--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,7 +12,9 @@ div#wall #tag-3.slick.wicked {
   display: none;
 }
 
-
+#wall .parent #tag-4 {
+  display: none;
+}
 
 div#wall div.parent #tag-5.slick {
   display: none;
